# docs/swagger.json
@@ -788,6 +788,9 @@
                 "location": {
                     "type": "string"
                 },
+                "name": {
+                    "type": "string"
+                },
                 "treatmentTypeID": {
                     "type": "integer"
                 },
@@ -923,6 +926,9 @@
         "payload.LoginResponse": {
             "type": "object",
             "properties": {
+                "firstLogin": {
+                    "type": "boolean"
+                },
                 "token": {
                     "type": "string"
                 }
@@ -1098,14 +1104,14 @@
                 "answer": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "number"
                     },
                     "example": [
-                        "1",
-                        "2",
-                        "3",
-                        "4",
-                        "5"
+                        1,
+                        2,
+                        3,
+                        4,
+                        5
                     ]
                 }
             }
